--- a/app/reservation-2.html
+++ b/app/reservation-2.html
@@ -9,6 +9,7 @@ current: reservation-2
   <!-- 立即預約 -->
   <section class="mb-10 mb-md-12 mb-lg-4">
     <h2 class="text-primary fw-normal fz-x-large text-center mb-6 mb-md-4">立即預約</h2>
+    <!-- 流程 -->
     <div class="row justify-content-center mb-8">
       <div class="col-md-6 col-lg-5 d-flex justify-content-between mx-auto">
         <p class="bg-light rounded-4 text-primary py-3 px-3 px-lg-6 px-xl-10 d-flex align-items-center">選擇方案</p>
@@ -20,6 +21,7 @@ current: reservation-2
       <span class="me-4">您選擇的是</span>
       <span class="fz-large text-secondary">首次體驗課程-基礎</span>
     </p>
+    <!-- 表單 -->
     <div class="row">
       <div class="col-md-6 col-lg-4 mx-auto">
         <form action="">
@@ -98,7 +100,6 @@ current: reservation-2
             <li class="mb-8">
               <h3 class="mb-4 fw-normal fz-medium">4. 上課預約報到日</h3>
               <p class="fz-small mb-2">若還沒有確定的日期，可以等待專員與您聯絡時再做詳細的諮詢哦！</p>
-              <!-- <input type="button" value="MM/DD/YYYY" class="btn btn-outline-primary"> -->
               <input type="text" placeholder="MM/DD/YYYY" name="datepicker" class="form-control border-secondary w-md-50">
             </li>
             <!-- 5. 填寫基本資料，完成預約後會寄送通知至電子信箱 -->
@@ -140,3 +141,13 @@ current: reservation-2
     </div>
   </section>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/vanillajs-datepicker@1.1.4/dist/js/datepicker-full.min.js"></script>
+<script>
+  const elem = document.querySelector('input[name="datepicker"]');
+  const datepicker = new Datepicker(elem, {
+    autohide: false,
+    prevArrow: "<span class='material-icons-outlined text-primary'>keyboard_arrow_left</span>",
+    nextArrow: "<span class='material-icons-outlined text-primary'>keyboard_arrow_right</span>",
+  }); 
+</script>
